tests/suite/snapshots/suite__check__tests__check__bad-mixed-array.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-mixed-array.xi:2:30]
   │
 2 │     i:int[][] = {{}, {true}, {1}}
   ·                              ─┬─  
   ·                               ╰─── Expected bool[] but found int[]
───╯

